--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.12"
+        "livewire/livewire": "^2.12",
+        "spatie/laravel-sitemap": "^6.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.9",
